# annuaire-cli

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/skills/deploy-local/: SKILL.md
.claude/skills/push-version/: SKILL.md
.github/: copilot-instructions.md
.github/prompts/: init-project.prompt.md
.specs/: annuaire-api.json
scripts/: check_api_sync.sh  deploy_locally.sh  generate-client.sh  version_manager.sh
shared/: Cargo.toml
shared/src/: lib.rs
src/: cli.rs  handlers.rs  main.rs  mcp.rs
tools/generate-client/: Cargo.toml  README.md
tools/generate-client/src/: main.rs
