[package]
name = "generate-client"
version = "0.2.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
indexmap = "2"
heck = "0.5"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "generate-client"
path = "src/main.rs"
